(16/02) Big update all finished

--- a/html/index.html
+++ b/html/index.html
@@ -122,28 +122,28 @@
           <div class="description">Developer, Designer</div>
           <div class="socials">
             <div class="socials-links">
-              <a class="social" href="#">
+              <a class="social" href="https://github.com/estxbxn">
                 <img
                   src="assets/img/socials/github.svg"
                   draggable="false"
                   alt="GitHub Icon"
                 />
               </a>
-              <a class="social" href="#">
+              <a class="social" href="https://gitlab.com/estxbxn">
                 <img
                   src="assets/img/socials/gitlab.svg"
                   draggable="false"
                   alt="GitLab Icon"
                 />
               </a>
-              <a class="social" href="#">
+              <a class="social" href="https://buymeacoffee.com/estxbxn">
                 <img
                   src="assets/img/socials/buy-me-a-coffee.svg"
                   draggable="false"
                   alt="BuyMeACoffee Icon"
                 />
               </a>
-              <a class="social" href="#">
+              <a class="social" href="https://x.com/estxbxn__">
                 <img
                   src="assets/img/socials/twitter.svg"
                   draggable="false"
@@ -177,77 +177,209 @@
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/css.svg"
                 draggable="false"
-                alt="HTML"
+                alt="CSS"
               />
-              <div class="title">HTML</div>
+              <div class="title">CSS</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/sass.svg"
                 draggable="false"
-                alt="HTML"
+                alt="SASS"
               />
-              <div class="title">HTML</div>
+              <div class="title">SASS</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/javascript.svg"
                 draggable="false"
-                alt="HTML"
+                alt="JavaScript"
               />
-              <div class="title">HTML</div>
+              <div class="title">JavaScript</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/typescript.svg"
                 draggable="false"
-                alt="HTML"
+                alt="TypeScript"
               />
-              <div class="title">HTML</div>
+              <div class="title">TypeScript</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/java.svg"
                 draggable="false"
-                alt="HTML"
+                alt="Java"
               />
-              <div class="title">HTML</div>
+              <div class="title">Java</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/react.svg"
                 draggable="false"
-                alt="HTML"
+                alt="React"
               />
-              <div class="title">HTML</div>
+              <div class="title">React</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/nodejs.svg"
                 draggable="false"
-                alt="HTML"
+                alt="Node.js"
               />
-              <div class="title">HTML</div>
+              <div class="title">Node.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/nextjs.svg"
+                draggable="false"
+                alt="Next.js"
+              />
+              <div class="title">Next.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/nuxtjs.svg"
+                draggable="false"
+                alt="Nuxt.js"
+              />
+              <div class="title">Nuxt.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/express.svg"
+                draggable="false"
+                alt="Express.js"
+              />
+              <div class="title">Express.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/fontawesome.svg"
+                draggable="false"
+                alt="Font Awesome"
+              />
+              <div class="title">Font Awesome</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/git.svg"
+                draggable="false"
+                alt="Git"
+              />
+              <div class="title">Git</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/github.svg"
+                draggable="false"
+                alt="GitHub"
+              />
+              <div class="title">GitHub</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/mongo.svg"
+                draggable="false"
+                alt="MongoDB"
+              />
+              <div class="title">MongoDB</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/mysql.svg"
+                draggable="false"
+                alt="MySQL"
+              />
+              <div class="title">MySQL</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/webpack.svg"
+                draggable="false"
+                alt="Webpack"
+              />
+              <div class="title">Webpack</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/pnpm.svg"
+                draggable="false"
+                alt="PNPM"
+              />
+              <div class="title">PNPM</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/vercel.svg"
+                draggable="false"
+                alt="Vercel"
+              />
+              <div class="title">Vercel</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/github.svg"
+                draggable="false"
+                alt="GitHub Pages"
+              />
+              <div class="title">GitHub Pages</div>
             </div>
           </li>
         </ul>
@@ -260,84 +392,36 @@
           Projects on which I was able to work and collaborate
         </div>
         <ul class="contents">
-          <a class="link" href="/">
+          <a class="link" href="https://espiec.com">
             <li class="item">
               <img
                 class="thumbnail"
-                src="assets/img/textures/2.png"
+                src="assets/img/projects/espiec.png"
                 draggable="false"
                 alt="Project Thumbnail"
               />
               <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
+                <div class="title">espiec.com</div>
+                <div class="description">Creation of my portfolio</div>
               </div>
             </li>
           </a>
-          <a class="link" href="/">
+          <a class="link" href="https://hokib.com">
             <li class="item">
               <img
                 class="thumbnail"
-                src="assets/img/textures/2.png"
+                src="assets/img/projects/hokib.png"
                 draggable="false"
                 alt="Project Thumbnail"
               />
               <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
-              </div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Project Thumbnail"
-              />
-              <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
-              </div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Project Thumbnail"
-              />
-              <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
+                <div class="title">hokib.com</div>
+                <div class="description">Creating a portfolio for Hokib</div>
               </div>
             </li>
           </a>
         </ul>
-        <a class="custom-button" href="/">
+        <a class="custom-button" href="projects.html">
           <img
             class="icon"
             src="assets/img/icons/circle.svg"
@@ -355,53 +439,21 @@
           Where I love to share my knowledge through writing
         </div>
         <ul class="contents">
-          <a class="link" href="/">
+          <a class="link" href="https://btssio-ccicampus-strasbourg.fr/">
             <li class="item">
               <img
                 class="thumbnail"
-                src="assets/img/textures/2.png"
+                src="assets/img/blog/cci.png"
                 draggable="false"
-                alt="Blog Thumbnail"
+                alt="Blog &mdash; CCI CAMPUS"
               />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
+              <div class="title">CCI Campus</div>
+              <div class="description">Blog of CCI Campus</div>
               <div class="date">September 29, 2023</div>
             </li>
           </a>
         </ul>
-        <a class="custom-button" href="/">
+        <a class="custom-button" href="blog.html">
           <img
             class="icon"
             src="assets/img/icons/circle.svg"
@@ -425,7 +477,7 @@
             draggable="false"
             alt="Wave Separator"
           />
-          <a class="custom-button" href="/">
+          <a class="custom-button" href="contact.html">
             <img
               class="icon"
               src="assets/img/icons/hand.svg"
@@ -458,35 +510,35 @@
           <div class="footer-right">
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Home</a>
+                <a class="link" href="index.html">Home</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Technologies</a>
+                <a class="link" href="about.html">Technologies</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Projects</a>
-              </li>
-            </ul>
-            <ul class="links">
-              <li class="link">
-                <a class="link" href="/">Blog</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">About</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">Contact</a>
+                <a class="link" href="projects.html">Projects</a>
               </li>
             </ul>
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Changelog</a>
+                <a class="link" href="blog.html">Blog</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Resume</a>
+                <a class="link" href="about.html">About</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Snippets</a>
+                <a class="link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="#">Changelog</a>
+              </li>
+              <li class="link">
+                <a class="link" href="assets/resume.pdf">Resume</a>
+              </li>
+              <li class="link">
+                <a class="link" href="#">Snippets</a>
               </li>
             </ul>
           </div>
