--- a/html/projects.html
+++ b/html/projects.html
@@ -124,17 +124,42 @@
             <li class="item">
               <img
                 class="thumbnail"
-                src="assets/img/textures/2.png"
+                src="assets/img/projects/espiec.png"
                 draggable="false"
                 alt="Project Thumbnail"
               />
               <div class="item-content">
-                <div class="title">Project Title</div>
+                <div class="title">espiec.com</div>
+                <div class="description">Creation of my portfolio</div>
+              </div>
+            </li>
+          </a>
+          <a class="link" href="/">
+            <li class="item">
+              <img
+                class="thumbnail"
+                src="assets/img/projects/hokib.png"
+                draggable="false"
+                alt="Project Thumbnail"
+              />
+              <div class="item-content">
+                <div class="title">hokib.com</div>
+                <div class="description">Creating a portfolio for Hokib</div>
+              </div>
+            </li>
+          </a>
+          <a class="link" href="/">
+            <li class="item">
+              <img
+                class="thumbnail"
+                src="assets/img/projects/whimsy.png"
+                draggable="false"
+                alt="Project Thumbnail"
+              />
+              <div class="item-content">
+                <div class="title">Whimsy Studio</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
+                  Creation of a graphic identity for the Whimsy Studio company
                 </div>
               </div>
             </li>
@@ -143,17 +168,14 @@
             <li class="item">
               <img
                 class="thumbnail"
-                src="assets/img/textures/2.png"
+                src="assets/img/projects/hyping.png"
                 draggable="false"
                 alt="Project Thumbnail"
               />
               <div class="item-content">
-                <div class="title">Project Title</div>
+                <div class="title">Hyping</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
+                  Provision of Minecraft plug-in services for Hyping Studio
                 </div>
               </div>
             </li>
@@ -162,17 +184,14 @@
             <li class="item">
               <img
                 class="thumbnail"
-                src="assets/img/textures/2.png"
+                src="assets/img/projects/elarys.png"
                 draggable="false"
                 alt="Project Thumbnail"
               />
               <div class="item-content">
-                <div class="title">Project Title</div>
+                <div class="title">Elarys</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
+                  Provision of Minecraft plug-in services for the Elarys server
                 </div>
               </div>
             </li>
@@ -181,18 +200,13 @@
             <li class="item">
               <img
                 class="thumbnail"
-                src="assets/img/textures/2.png"
+                src="assets/img/projects/lysaria.png"
                 draggable="false"
                 alt="Project Thumbnail"
               />
               <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
+                <div class="title">Lysaria</div>
+                <div class="description">Creating a Minecraft server</div>
               </div>
             </li>
           </a>
@@ -212,7 +226,7 @@
             draggable="false"
             alt="Wave Separator"
           />
-          <a class="custom-button" href="/">
+          <a class="custom-button" href="contact.html">
             <img
               class="icon"
               src="assets/img/icons/hand.svg"
@@ -245,35 +259,35 @@
           <div class="footer-right">
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Home</a>
+                <a class="link" href="index.html">Home</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Technologies</a>
+                <a class="link" href="about.html">Technologies</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Projects</a>
-              </li>
-            </ul>
-            <ul class="links">
-              <li class="link">
-                <a class="link" href="/">Blog</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">About</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">Contact</a>
+                <a class="link" href="projects.html">Projects</a>
               </li>
             </ul>
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Changelog</a>
+                <a class="link" href="blog.html">Blog</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Resume</a>
+                <a class="link" href="about.html">About</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Snippets</a>
+                <a class="link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="#">Changelog</a>
+              </li>
+              <li class="link">
+                <a class="link" href="assets/resume.pdf">Resume</a>
+              </li>
+              <li class="link">
+                <a class="link" href="#">Snippets</a>
               </li>
             </ul>
           </div>
