--- a/html/about.html
+++ b/html/about.html
@@ -160,77 +160,209 @@
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/css.svg"
                 draggable="false"
-                alt="HTML"
+                alt="CSS"
               />
-              <div class="title">HTML</div>
+              <div class="title">CSS</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/sass.svg"
                 draggable="false"
-                alt="HTML"
+                alt="SASS"
               />
-              <div class="title">HTML</div>
+              <div class="title">SASS</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/javascript.svg"
                 draggable="false"
-                alt="HTML"
+                alt="JavaScript"
               />
-              <div class="title">HTML</div>
+              <div class="title">JavaScript</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/typescript.svg"
                 draggable="false"
-                alt="HTML"
+                alt="TypeScript"
               />
-              <div class="title">HTML</div>
+              <div class="title">TypeScript</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/java.svg"
                 draggable="false"
-                alt="HTML"
+                alt="Java"
               />
-              <div class="title">HTML</div>
+              <div class="title">Java</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/react.svg"
                 draggable="false"
-                alt="HTML"
+                alt="React"
               />
-              <div class="title">HTML</div>
+              <div class="title">React</div>
             </div>
           </li>
           <li class="item">
             <div class="item-content">
               <img
                 class="icon"
-                src="assets/img/techs/html.svg"
+                src="assets/img/techs/nodejs.svg"
                 draggable="false"
-                alt="HTML"
+                alt="Node.js"
               />
-              <div class="title">HTML</div>
+              <div class="title">Node.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/nextjs.svg"
+                draggable="false"
+                alt="Next.js"
+              />
+              <div class="title">Next.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/nuxtjs.svg"
+                draggable="false"
+                alt="Nuxt.js"
+              />
+              <div class="title">Nuxt.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/express.svg"
+                draggable="false"
+                alt="Express.js"
+              />
+              <div class="title">Express.js</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/fontawesome.svg"
+                draggable="false"
+                alt="Font Awesome"
+              />
+              <div class="title">Font Awesome</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/git.svg"
+                draggable="false"
+                alt="Git"
+              />
+              <div class="title">Git</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/github.svg"
+                draggable="false"
+                alt="GitHub"
+              />
+              <div class="title">GitHub</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/mongo.svg"
+                draggable="false"
+                alt="MongoDB"
+              />
+              <div class="title">MongoDB</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/mysql.svg"
+                draggable="false"
+                alt="MySQL"
+              />
+              <div class="title">MySQL</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/webpack.svg"
+                draggable="false"
+                alt="Webpack"
+              />
+              <div class="title">Webpack</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/pnpm.svg"
+                draggable="false"
+                alt="PNPM"
+              />
+              <div class="title">PNPM</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/vercel.svg"
+                draggable="false"
+                alt="Vercel"
+              />
+              <div class="title">Vercel</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <img
+                class="icon"
+                src="assets/img/techs/github.svg"
+                draggable="false"
+                alt="GitHub Pages"
+              />
+              <div class="title">GitHub Pages</div>
             </div>
           </li>
         </ul>
@@ -261,6 +393,31 @@
         </ul>
       </section>
 
+      <!-- Call To Action -->
+      <section class="call-to-action">
+        <div class="contents">
+          <div class="title">Ready to entrust your mission ?</div>
+          <div class="description">
+            Contact me today to discuss how we can help you achieve your goals.
+          </div>
+          <img
+            class="wave"
+            src="assets/img/icons/wave.svg"
+            draggable="false"
+            alt="Wave Separator"
+          />
+          <a class="custom-button" href="contact.html">
+            <img
+              class="icon"
+              src="assets/img/icons/hand.svg"
+              draggable="false"
+              alt="Contact Me Icon"
+            />
+            Contact Me
+          </a>
+        </div>
+      </section>
+
       <!-- Footer -->
       <footer>
         <div class="container">
@@ -282,35 +439,35 @@
           <div class="footer-right">
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Home</a>
+                <a class="link" href="index.html">Home</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Technologies</a>
+                <a class="link" href="about.html">Technologies</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Projects</a>
-              </li>
-            </ul>
-            <ul class="links">
-              <li class="link">
-                <a class="link" href="/">Blog</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">About</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">Contact</a>
+                <a class="link" href="projects.html">Projects</a>
               </li>
             </ul>
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Changelog</a>
+                <a class="link" href="blog.html">Blog</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Resume</a>
+                <a class="link" href="about.html">About</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Snippets</a>
+                <a class="link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="#">Changelog</a>
+              </li>
+              <li class="link">
+                <a class="link" href="assets/resume.pdf">Resume</a>
+              </li>
+              <li class="link">
+                <a class="link" href="#">Snippets</a>
               </li>
             </ul>
           </div>
