--- a/html/blog.html
+++ b/html/blog.html
@@ -120,7 +120,20 @@
       <!-- Blog -->
       <section class="blogs">
         <ul class="contents">
-          <a class="link" href="/">
+          <a class="link" href="https://btssio-ccicampus-strasbourg.fr/">
+            <li class="item">
+              <img
+                class="thumbnail"
+                src="assets/img/blog/cci.png"
+                draggable="false"
+                alt="Blog &mdash; CCI CAMPUS"
+              />
+              <div class="title">CCI Campus</div>
+              <div class="description">Blog of CCI Campus</div>
+              <div class="date">September 29, 2023</div>
+            </li>
+          </a>
+          <!-- <a class="link" href="/">
             <li class="item">
               <img
                 class="thumbnail"
@@ -134,37 +147,7 @@
               </div>
               <div class="date">September 29, 2023</div>
             </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
+          </a> -->
         </ul>
       </section>
 
@@ -181,7 +164,7 @@
             draggable="false"
             alt="Wave Separator"
           />
-          <a class="custom-button" href="/">
+          <a class="custom-button" href="contact.html">
             <img
               class="icon"
               src="assets/img/icons/hand.svg"
@@ -214,35 +197,35 @@
           <div class="footer-right">
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Home</a>
+                <a class="link" href="index.html">Home</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Technologies</a>
+                <a class="link" href="about.html">Technologies</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Projects</a>
-              </li>
-            </ul>
-            <ul class="links">
-              <li class="link">
-                <a class="link" href="/">Blog</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">About</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">Contact</a>
+                <a class="link" href="projects.html">Projects</a>
               </li>
             </ul>
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Changelog</a>
+                <a class="link" href="blog.html">Blog</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Resume</a>
+                <a class="link" href="about.html">About</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Snippets</a>
+                <a class="link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="#">Changelog</a>
+              </li>
+              <li class="link">
+                <a class="link" href="assets/resume.pdf">Resume</a>
+              </li>
+              <li class="link">
+                <a class="link" href="#">Snippets</a>
               </li>
             </ul>
           </div>
