--- a/html/contact.html
+++ b/html/contact.html
@@ -171,28 +171,28 @@
         </form>
         <div class="socials">
           <div class="socials-links">
-            <a class="social" href="#">
+            <a class="social" href="https://github.com/estxbxn">
               <img
                 src="assets/img/socials/github.svg"
                 draggable="false"
                 alt="GitHub Icon"
               />
             </a>
-            <a class="social" href="#">
+            <a class="social" href="https://gitlab.com/estxbxn">
               <img
                 src="assets/img/socials/gitlab.svg"
                 draggable="false"
                 alt="GitLab Icon"
               />
             </a>
-            <a class="social" href="#">
+            <a class="social" href="https://buymeacoffee.com/estxbxn">
               <img
                 src="assets/img/socials/buy-me-a-coffee.svg"
                 draggable="false"
                 alt="BuyMeACoffee Icon"
               />
             </a>
-            <a class="social" href="#">
+            <a class="social" href="https://x.com/estxbxn__">
               <img
                 src="assets/img/socials/twitter.svg"
                 draggable="false"
@@ -216,7 +216,7 @@
             draggable="false"
             alt="Wave Separator"
           />
-          <a class="custom-button" href="/">
+          <a class="custom-button" href="contact.html">
             <img
               class="icon"
               src="assets/img/icons/hand.svg"
@@ -249,35 +249,35 @@
           <div class="footer-right">
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Home</a>
+                <a class="link" href="index.html">Home</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Technologies</a>
+                <a class="link" href="about.html">Technologies</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Projects</a>
-              </li>
-            </ul>
-            <ul class="links">
-              <li class="link">
-                <a class="link" href="/">Blog</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">About</a>
-              </li>
-              <li class="link">
-                <a class="link" href="/">Contact</a>
+                <a class="link" href="projects.html">Projects</a>
               </li>
             </ul>
             <ul class="links">
               <li class="link">
-                <a class="link" href="/">Changelog</a>
+                <a class="link" href="blog.html">Blog</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Resume</a>
+                <a class="link" href="about.html">About</a>
               </li>
               <li class="link">
-                <a class="link" href="/">Snippets</a>
+                <a class="link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="#">Changelog</a>
+              </li>
+              <li class="link">
+                <a class="link" href="assets/resume.pdf">Resume</a>
+              </li>
+              <li class="link">
+                <a class="link" href="#">Snippets</a>
               </li>
             </ul>
           </div>
