(16/02) Fixed titles from CSS

--- a/html/index.html
+++ b/html/index.html
@@ -118,8 +118,8 @@
         />
 
         <div class="contents">
-          <div class="title">Estéban Piecourt</div>
-          <div class="description">Developer, Designer</div>
+          <h1 class="title">Estéban Piecourt</h1>
+          <p class="description">Developer, Designer</p>
           <div class="socials">
             <div class="socials-links">
               <a class="social" href="https://github.com/estxbxn">
